<resources>
    <string name="app_name">BMI計算器</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bmi_title">BMI計算器,請輸入身高及體重</string>
    <string name="bmi_height">身高:</string>
    <string name="bmi_weight">體重:</string>
    <string name="bmi_btn">計算BMI</string>
    <string name="bmi_btn2">計算BMI(開新視窗)</string>
    <string name="bmi_result">結果:</string>
    <string name="bmi_str1">您的BMI為</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_title">About this App</string>
    <string name="action_msg">BMI Calc</string>
    <string name="calc_err01">請先輸入身高與體重!</string>
    <string name="label_homepage">Google首頁</string>
    <string name="label_googleMap">Google Map</string>
    <string name="btn_showMsg">Show Msg at Notification</string>
    <string name="menu_history">查看BMI歷史紀錄</string>
    <string name="hisotrynote">點擊數據將會刪除資料</string>
</resources>
